<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">


    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="-99dp"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sagrada_background" />

    <ImageView
        android:id="@+id/sagradaBanner"
        android:layout_width="0dp"
        android:layout_height="154dp"
        android:layout_marginTop="60dp"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sagrada_board_game" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="251dp"
        android:layout_height="71dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/button"
        android:fontFamily="serif"
        android:onClick="onPlayOnlineClicked"
        android:text="@string/btnPlay"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sagradaBanner" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="197dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:fontFamily="serif"
        android:text="@string/btnHelp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />


    <EditText
        android:id="@+id/txtName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/txtName"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/colorAccent"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sagradaBanner" />

    <EditText
        android:id="@+id/txtIPAddress"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:hint="@string/txtIPAddress"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="190dp"
        android:layout_height="66dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/button"
        android:fontFamily="serif"
        android:onClick="onConnectClicked"
        android:text="@string/btnConnect"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIPAddress" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="106dp"
        android:layout_height="108dp"
        android:background="#4CAF50"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369" />


</androidx.constraintlayout.widget.ConstraintLayout>